Fix vercel.json configuration

--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,10 @@
 {
-    "redirects": [
-      {
-        "source": "http://oceancrown.com.ng",
-        "destination": "https://www.oceancrown.com.ng",
-        "permanent": true
-      }
-    ]
-  }
-  
+  "redirects": [
+    {
+      "source": "http://oceancrown.com.ng",
+      "destination": "https://www.oceancrown.com.ng",
+      "permanent": true
+    }
+  ],
+  "framework": "react"
+} 
