Fix Vercel deployment configuration

--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,6 @@
 {
-  "redirects": [
-    {
-      "source": "http://oceancrown.com.ng",
-      "destination": "https://www.oceancrown.com.ng",
-      "permanent": true
-    }
-  ],
-  "framework": "react"
+  "framework": "create-react-app",
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/index.html" }
+  ]
 } 
